--- a/app/stylesheet/app.scss
+++ b/app/stylesheet/app.scss
@@ -27,7 +27,7 @@ $color: #8cb63c;
 }
 
 .logo {
-  background: url('/public/images/logo.png') no-repeat;
+  background: url('/public/images/logo.svg') no-repeat;
   background-size: 100%;
   width: 100px;
   height: 50px;
@@ -62,6 +62,14 @@ $color: #8cb63c;
   background: url('/public/images/icon-github.svg') no-repeat;
   background-size: 100%;
   width: 32px;
+  height: 32px;
+  display: block;
+}
+
+.icon-play-store {
+  background: url('/public/images/icon-play-store.svg') no-repeat;
+  background-size: 100%;
+  width: 98px;
   height: 32px;
   display: block;
 }
